==> alibaba/AliOS-Things/security/alicrypto/mbedtls/library/aes_nuvoton.c <==
#include "../include/mbedtls/config.h"
#include MBEDTLS_CONFIG_FILE
#include <string.h>
#include "../include/mbedtls/aes.h"
#include "../include/mbedtls/padlock.h"
#include "../include/mbedtls/aesni.h"
#include "../include/mbedtls/platform.h"
#include <stdio.h>
#define mbedtls_printf printf
#include "NuMicro.h"

int mbedtls_aes_setkey_enc( mbedtls_aes_context *ctx, const unsigned char *key,
                    unsigned int keybits )
{
    unsigned int i;
    uint32_t   *aes_key = (uint32_t *)&CRPT->AES0_KEY[0];
    
    CRPT->AES_CTL |= CRPT_AES_CTL_ENCRPT_Msk;

    switch( keybits )
    {
        case 128: CRPT->AES_CTL |= (0 << CRPT_AES_CTL_KEYSZ_Pos); break;
        case 192: CRPT->AES_CTL |= (1 << CRPT_AES_CTL_KEYSZ_Pos); break;
        case 256: CRPT->AES_CTL |= (2 << CRPT_AES_CTL_KEYSZ_Pos); break;
        default : return( MBEDTLS_ERR_AES_INVALID_KEY_LENGTH );
    }
    for( i = 0; i < ( keybits >> 5 ); i++ )
    {
        GET_UINT32_BE( aes_key[i], key, i << 2 );
    }
    return( 0 );
}

int mbedtls_aes_setkey_dec( mbedtls_aes_context *ctx, const unsigned char *key,
                    unsigned int keybits )
{
    unsigned int i;
    uint32_t   *aes_key = (uint32_t *)&CRPT->AES0_KEY[0];
    
    CRPT->AES_CTL &= ~CRPT_AES_CTL_ENCRPT_Msk;

    switch( keybits )
    {
        case 128: CRPT->AES_CTL |= (0 << CRPT_AES_CTL_KEYSZ_Pos); break;
        case 192: CRPT->AES_CTL |= (1 << CRPT_AES_CTL_KEYSZ_Pos); break;
        case 256: CRPT->AES_CTL |= (2 << CRPT_AES_CTL_KEYSZ_Pos); break;
        default : return( MBEDTLS_ERR_AES_INVALID_KEY_LENGTH );
    }
    for( i = 0; i < ( keybits >> 5 ); i++ )
    {
        GET_UINT32_BE( aes_key[i], key, i << 2 );
    }
    return( 0 );
}

int mbedtls_aes_crypt_ecb(mbedtls_aes_context *ctx, int mode,
                          const unsigned char input[16],
                          unsigned char       output[16])
{

    CRPT->AES_CTL |= (AES_MODE_ECB << CRPT_AES_CTL_OPMODE_Pos);

    if( mode == MBEDTLS_AES_ENCRYPT )
        mbedtls_internal_aes_encrypt( ctx, input, output );
    else
        mbedtls_internal_aes_decrypt( ctx, input, output );

    return( 0 );
}
