==> alibaba/AliOS-Things/network/bluetooth/breeze/ref-impl/aes_mbed.c <==
#include "config.h"
#include MBEDTLS_CONFIG_FILE
#include <string.h>
#include "aes.h"
#include "padlock.h"
#include "aesni.h"

int mbedtls_aes_setkey_enc(mbedtls_aes_context *ctx, const unsigned char *key,
                           unsigned int keybits)
{
    unsigned int i;
    uint32_t    *RK;

#if !defined(MBEDTLS_AES_ROM_TABLES)
    if (aes_init_done == 0) {
        aes_gen_tables();
        aes_init_done = 1;
    }
#endif

    switch (keybits) {
        case 128:
            ctx->nr = 10;
            break;
        case 192:
            ctx->nr = 12;
            break;
        case 256:
            ctx->nr = 14;
            break;
        default:
            return (MBEDTLS_ERR_AES_INVALID_KEY_LENGTH);
    }

#if defined(MBEDTLS_PADLOCK_C) && defined(MBEDTLS_PADLOCK_ALIGN16)
    if (aes_padlock_ace == -1)
        aes_padlock_ace = mbedtls_padlock_has_support(MBEDTLS_PADLOCK_ACE);

    if (aes_padlock_ace)
        ctx->rk = RK = MBEDTLS_PADLOCK_ALIGN16(ctx->buf);
    else
#endif
        ctx->rk = RK = ctx->buf;

#if defined(MBEDTLS_AESNI_C) && defined(MBEDTLS_HAVE_X86_64)
    if (mbedtls_aesni_has_support(MBEDTLS_AESNI_AES))
        return (
          mbedtls_aesni_setkey_enc((unsigned char *)ctx->rk, key, keybits));
#endif

    for (i = 0; i < (keybits >> 5); i++) {
        GET_UINT32_LE(RK[i], key, i << 2);
    }

    switch (ctx->nr) {
        case 10:

            for (i = 0; i < 10; i++, RK += 4) {
                RK[4] = RK[0] ^ RCON[i] ^ ((uint32_t)FSb[(RK[3] >> 8) & 0xFF]) ^
                        ((uint32_t)FSb[(RK[3] >> 16) & 0xFF] << 8) ^
                        ((uint32_t)FSb[(RK[3] >> 24) & 0xFF] << 16) ^
                        ((uint32_t)FSb[(RK[3]) & 0xFF] << 24);

                RK[5] = RK[1] ^ RK[4];
                RK[6] = RK[2] ^ RK[5];
                RK[7] = RK[3] ^ RK[6];
            }
            break;

        case 12:

            for (i = 0; i < 8; i++, RK += 6) {
                RK[6] = RK[0] ^ RCON[i] ^ ((uint32_t)FSb[(RK[5] >> 8) & 0xFF]) ^
                        ((uint32_t)FSb[(RK[5] >> 16) & 0xFF] << 8) ^
                        ((uint32_t)FSb[(RK[5] >> 24) & 0xFF] << 16) ^
                        ((uint32_t)FSb[(RK[5]) & 0xFF] << 24);

                RK[7]  = RK[1] ^ RK[6];
                RK[8]  = RK[2] ^ RK[7];
                RK[9]  = RK[3] ^ RK[8];
                RK[10] = RK[4] ^ RK[9];
                RK[11] = RK[5] ^ RK[10];
            }
            break;

        case 14:

            for (i = 0; i < 7; i++, RK += 8) {
                RK[8] = RK[0] ^ RCON[i] ^ ((uint32_t)FSb[(RK[7] >> 8) & 0xFF]) ^
                        ((uint32_t)FSb[(RK[7] >> 16) & 0xFF] << 8) ^
                        ((uint32_t)FSb[(RK[7] >> 24) & 0xFF] << 16) ^
                        ((uint32_t)FSb[(RK[7]) & 0xFF] << 24);

                RK[9]  = RK[1] ^ RK[8];
                RK[10] = RK[2] ^ RK[9];
                RK[11] = RK[3] ^ RK[10];

                RK[12] = RK[4] ^ ((uint32_t)FSb[(RK[11]) & 0xFF]) ^
                         ((uint32_t)FSb[(RK[11] >> 8) & 0xFF] << 8) ^
                         ((uint32_t)FSb[(RK[11] >> 16) & 0xFF] << 16) ^
                         ((uint32_t)FSb[(RK[11] >> 24) & 0xFF] << 24);

                RK[13] = RK[5] ^ RK[12];
                RK[14] = RK[6] ^ RK[13];
                RK[15] = RK[7] ^ RK[14];
            }
            break;
    }

    return (0);
}

int mbedtls_aes_setkey_dec(mbedtls_aes_context *ctx, const unsigned char *key,
                           unsigned int keybits)
{
    int                 i, j, ret;
    mbedtls_aes_context cty;
    uint32_t           *RK;
    uint32_t           *SK;

    mbedtls_aes_init(&cty);

#if defined(MBEDTLS_PADLOCK_C) && defined(MBEDTLS_PADLOCK_ALIGN16)
    if (aes_padlock_ace == -1)
        aes_padlock_ace = mbedtls_padlock_has_support(MBEDTLS_PADLOCK_ACE);

    if (aes_padlock_ace)
        ctx->rk = RK = MBEDTLS_PADLOCK_ALIGN16(ctx->buf);
    else
#endif
        ctx->rk = RK = ctx->buf;

    /* Also checks keybits */
    if ((ret = mbedtls_aes_setkey_enc(&cty, key, keybits)) != 0)
        goto exit;

    ctx->nr = cty.nr;

#if defined(MBEDTLS_AESNI_C) && defined(MBEDTLS_HAVE_X86_64)
    if (mbedtls_aesni_has_support(MBEDTLS_AESNI_AES)) {
        mbedtls_aesni_inverse_key((unsigned char *)ctx->rk,
                                  (const unsigned char *)cty.rk, ctx->nr);
        goto exit;
    }
#endif

    SK = cty.rk + cty.nr * 4;

    *RK++ = *SK++;
    *RK++ = *SK++;
    *RK++ = *SK++;
    *RK++ = *SK++;

    for (i = ctx->nr - 1, SK -= 8; i > 0; i--, SK -= 8) {
        for (j = 0; j < 4; j++, SK++) {
            *RK++ = RT0[FSb[(*SK) & 0xFF]] ^ RT1[FSb[(*SK >> 8) & 0xFF]] ^
                    RT2[FSb[(*SK >> 16) & 0xFF]] ^ RT3[FSb[(*SK >> 24) & 0xFF]];
        }
    }

    *RK++ = *SK++;
    *RK++ = *SK++;
    *RK++ = *SK++;
    *RK++ = *SK++;

exit:
    mbedtls_aes_free(&cty);

    return (ret);
}

int mbedtls_aes_crypt_ecb(mbedtls_aes_context *ctx, int mode,
                          const unsigned char input[16],
                          unsigned char       output[16])
{
#if defined(MBEDTLS_AESNI_C) && defined(MBEDTLS_HAVE_X86_64)
    if (mbedtls_aesni_has_support(MBEDTLS_AESNI_AES))
        return (mbedtls_aesni_crypt_ecb(ctx, mode, input, output));
#endif

#if defined(MBEDTLS_PADLOCK_C) && defined(MBEDTLS_HAVE_X86)
    if (aes_padlock_ace) {
        if (mbedtls_padlock_xcryptecb(ctx, mode, input, output) == 0)
            return (0);

        // If padlock data misaligned, we just fall back to
        // unaccelerated mode
        //
    }
#endif

    if (mode == MBEDTLS_AES_ENCRYPT)
        mbedtls_aes_encrypt(ctx, input, output);
    else
        mbedtls_aes_decrypt(ctx, input, output);

    return (0);
}
